@@ -267,6 +267,7 @@ wxGTK:
 wxMSW:
 
 - Fix crashes when using wxTextCtrl with MinGW TDM 64 (#22639).
+- Avoid appending extraneous NUL bytes to wxTextDataObject text (#22928).
 - Fix glitch in drawing wxStaticBox with a control as label (#22952).
 - Save windows geometry correctly when using Aero Snap (Randalphwa, #22730).
 - Fix generating wxEVT_TEXT_ENTER in wxBitmapComboBox (#16318).
